# SmsUser

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.example.yml  nginx.example.conf  pyproject.toml
backend/api/: constants.py  serializers.py  tasks.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/users/: admin.py  models.py  settings.py
backend/users/migrations/: 0001_initial.py  0002_alter_otp_expires_at.py
infra/: docker-compose.yml  nginx.conf
