[tool.poetry]
name = "smsuser"
version = "0.1.0"
description = ""
authors = ["Artem Nosov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.20"
djangorestframework = "3.14.0"
python-dotenv = "1.0.0"
drf-yasg = "1.21.7"
celery = "5.3.1"
flower = "2.0.0"
gunicorn = "21.2.0"
psycopg2-binary = "2.9.7"
djoser = "^2.2.0"
django-redis = "5.3.0"
django-smtp-ssl = "^1.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "4.1.0"
django-extensions = "3.2.3"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
